--- a/index.html
+++ b/index.html
@@ -11,10 +11,46 @@
 </head>
 	<body>
 		<h1>Random Color Generator</h1>
+		<nav>
+			<div class="">
+				<h4>Color Flipper</h4>
+				<ul>
+					<li>
+						<a href="index.html">Simple</a>
+					</li>
+					<li>
+						<a href="hex.html">Hex</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+		<main>
+			<div class="container">
+				<h2>Background Color : <span class="color">#f1f5f8</span></h2>
+				<button id="btn" class="btn btn-hero">click me</button>
+			</div>
+		</main>
+		<script>
+			console.log("I'm ready!")
+			const colors = ["pink", "salmon", "rgba(12, 12, 12, 0.5)", "cornflowerblue"];
+			const btn = document.getElementById("btn");
+			const color = document.querySelector(".color");
 		
-	<script>
-		console.log("I'm ready!")
+			btn.addEventListener("click", function() {
+				console.log(document.body);
+				const randomNumber = 2;
+				console.log("getRandomNumber", getRandomNumber())
+			
+				document.body.style.backgroundColor = colors[getRandomNumber()];
+				color.textContent = colors[getRandomNumber()];
+
+			});
 		
-	</script>
+			function getRandomNumber() {
+				return Math.floor(Math.random() * colors.length);
+				
+			};
+		
+		</script>
 	</body>
 </html>
