Added a setInterval for fun.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
 				color.textContent = colors[getRandomNumber()];
 
 			});
+			
+			// setInterval(function() {
+// 				document.body.style.backgroundColor = colors[getRandomNumber()];
+// 			}, 333);
+			
+			
 		
 			function getRandomNumber() {
 				return Math.floor(Math.random() * colors.length);
